@@ -3,16 +3,16 @@ class Admin::PushRulesController < Admin::ApplicationController
 
   respond_to :html
 
-  def index
+  def show
   end
 
   def update
-    @push_rule.update_attributes(push_rule_params.merge(is_sample: true))
+    @push_rule.update_attributes(push_rule_params)
 
     if @push_rule.valid?
-      redirect_to admin_push_rules_path, notice: 'Push Rules updated successfully.'
+      redirect_to admin_push_rule_path, notice: 'Push Rule updated successfully.'
     else
-      render :index
+      render :show
     end
   end
 
@@ -20,7 +20,8 @@ class Admin::PushRulesController < Admin::ApplicationController
 
   def push_rule_params
     params.require(:push_rule).permit(:deny_delete_tag, :delete_branch_regex,
-      :commit_message_regex, :force_push_regex, :author_email_regex, :member_check, :file_name_regex, :max_file_size)
+      :commit_message_regex, :force_push_regex, :author_email_regex, :member_check,
+      :file_name_regex, :max_file_size, :prevent_secrets)
   end
 
   def push_rule
