@@ -47,7 +47,7 @@
             Spam Logs
 
     = nav_link(controller: :push_rules) do
-      = link_to admin_push_rules_path, title: 'Push Rules' do
+      = link_to admin_push_rule_path, title: 'Push Rules' do
         %span
           Push Rules
 
